--- a/banestes/package.json
+++ b/banestes/package.json
@@ -14,6 +14,7 @@
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "sass": "^1.86.3"
   },
   "devDependencies": {
